--- a/src/animations.scss
+++ b/src/animations.scss
@@ -1,11 +1,24 @@
+@import "./constants.scss";
+
 @keyframes fade_out {
   0% {
     opacity: 1;
-    transform: perspective(500px) translate3d(0);
+    transform: perspective(200px) translate3d(0, 0, 0);
   }
   100% {
     opacity: 0;
     transform: perspective(200px) translate3d(0, 0, -200px);
+  }
+}
+
+@keyframes fade_in {
+  0% {
+    opacity: 0;
+    transform: perspective(200px) translate3d(0, 0, -200px);
+  }
+  100% {
+    opacity: 1;
+    transform: perspective(200px) translate3d(0, 0, 0);
   }
 }
 
